fix: social bar z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 app-social-bar {
     position: fixed;
     top: 40vh;
+    z-index: 1;
 }
 
 .limit {
